--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "eslint-config-next": "14.2.3",
     "input-otp": "^1.2.4",
     "lucide-react": "^0.446.0",
+    "motion": "^12.23.12",
     "next": "14.2.3",
     "next-themes": "^0.3.0",
     "postcss": "8.4.38",
