--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@hookform/resolvers": "^3.9.0",
+    "@portabletext/react": "^4.0.3",
     "@radix-ui/react-accordion": "^1.2.0",
     "@radix-ui/react-alert-dialog": "^1.1.1",
     "@radix-ui/react-aspect-ratio": "^1.1.0",
@@ -37,6 +38,10 @@
     "@radix-ui/react-toggle": "^1.1.0",
     "@radix-ui/react-toggle-group": "^1.1.0",
     "@radix-ui/react-tooltip": "^1.1.2",
+    "@sanity/client": "^7.10.0",
+    "@sanity/icons": "^3.7.4",
+    "@sanity/image-url": "^1.2.0",
+    "@sanity/vision": "^4.6.1",
     "@types/node": "20.14.0",
     "@types/react": "18.3.1",
     "@types/react-dom": "18.3.0",
@@ -52,6 +57,7 @@
     "lucide-react": "^0.446.0",
     "motion": "^12.23.12",
     "next": "14.2.3",
+    "next-sanity": "^10.0.15",
     "next-themes": "^0.3.0",
     "postcss": "8.4.38",
     "react": "18.3.1",
@@ -60,7 +66,9 @@
     "react-hook-form": "^7.53.0",
     "react-resizable-panels": "^2.1.3",
     "recharts": "^2.12.7",
+    "sanity": "^4.6.1",
     "sonner": "^1.5.0",
+    "styled-components": "^6.1.19",
     "swiper": "^11.2.10",
     "tailwind-merge": "^2.5.2",
     "tailwindcss": "3.4.3",
